liaison back - front statistiques territoires et suppression erreurs